<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/gradient_background"
    tools:context=".SegundaTela">

    <LinearLayout
        android:layout_width="324dp"
        android:layout_height="621dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_italic"
            android:text="@string/add_prod"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/form_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="200dp"
            android:layout_height="37dp"
            android:background="@drawable/green_border"
            android:gravity="center"
            android:layout_below="@id/textViewName"
            android:layout_alignParentStart="true"
            android:layout_marginStart="79dp"
            android:layout_marginTop="-29dp"
            android:hint="@string/desc_name" />

        <TextView
            android:id="@+id/textViewCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextName"
            android:layout_marginTop="40dp"
            android:text="@string/form_cod"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextCode"
            android:layout_width="200dp"
            android:layout_height="37dp"
            android:background="@drawable/green_border"
            android:layout_below="@id/textViewCode"
            android:layout_marginStart="79dp"
            android:layout_marginTop="-30dp"
            android:gravity="center"
            android:hint="@string/desc_cod" />

        <TextView
            android:id="@+id/textViewQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextCode"
            android:layout_marginTop="40dp"
            android:text="@string/form_quant"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextQuantity"
            android:layout_width="180dp"
            android:layout_height="37dp"
            android:background="@drawable/green_border"
            android:layout_below="@id/textViewQuantity"
            android:gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-28dp"
            android:hint="@string/desc_quant"
            android:inputType="number" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextQuantity"
            android:layout_marginTop="35dp"
            android:text="@string/form_desc"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDescription"
            android:layout_marginTop="13dp"
            android:background="@drawable/green_border"
            android:hint="@string/desc_desc"
            android:gravity="center"
            android:inputType="textMultiLine"
            android:lines="4" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#4D41DC65"
            android:text="@string/form_env" />


    </LinearLayout>

    <ImageView
        android:layout_width="194dp"
        android:layout_height="232dp"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="90dp"
        android:src="@drawable/icon" />

</FrameLayout>

